--- a/app/src/main/res/layout/item_bottom_dialog.xml
+++ b/app/src/main/res/layout/item_bottom_dialog.xml
@@ -12,6 +12,7 @@
         android:id="@+id/iv_thumbnail"
         android:layout_width="48dp"
         android:layout_height="48dp"
+        android:src="@drawable/ic_baseline_trending_up_24"
         android:contentDescription="@string/thumbnail" />
 
     <LinearLayout
