--- a/app/src/main/res/layout/item_naver_rank.xml
+++ b/app/src/main/res/layout/item_naver_rank.xml
@@ -7,15 +7,30 @@
     android:orientation="horizontal"
     android:padding="8dp">
 
-    <TextView
-        android:id="@+id/tv_rank"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        tools:text="1" />
-<!--
+    <LinearLayout
+        android:layout_width="36dp"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_rank"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            tools:text="1" />
+
+        <TextView
+            android:id="@+id/tv_rank_bullet"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            tools:text="-" />
+
+    </LinearLayout>
+
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -29,26 +44,45 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ellipsize="end"
-            android:maxLines="1"
+            android:maxLines="2"
             android:textSize="16sp"
             android:textStyle="bold"
             tools:text="트렌kㅓㅂ입니다." />
 
-        <TextView
-            android:id="@+id/tv_view_count"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="2만 + 회 검색" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_category"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="카테고리" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="4dp"
+                android:text="@string/separate" />
+
+            <TextView
+                android:id="@+id/tv_writer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="글쓴이" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
 
     <ImageView
         android:id="@+id/iv_thumbnail"
-        android:layout_width="64dp"
+        android:layout_width="100dp"
         android:layout_height="64dp"
         android:layout_marginStart="8dp"
         android:contentDescription="@string/thumbnail"
-        android:src="@drawable/ic_baseline_trending_up_24" />-->
+        android:src="@drawable/ic_baseline_trending_up_24" />
 
 </LinearLayout>
